monticore-grammar/src/test/resources/de/monticore/javalight/cocos/valid/MethodDecl.java
/* (c) https://github.com/MontiCore/monticore */
public void meth1(int i, boolean b) throws A {}
