monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0812/A0812.java
public void meth1(int i, boolean i) {}
